tests/error/type_match/base_case_tuple_mismatched_elem_type1.bz
// error: unable to match type 'int64' to 'int32'
// note: while matching expression of type '[int64, float64, str]' to '[int32, float64, str]'
function test()
{
	let _: [int32, float64, str] = [int64, float64, str]();
}
